tests/fails/f16.t

terra foo(c : int)
    var a : int8 = (&c):as(int8)
end
foo(1)